--- a/src/main.scss
+++ b/src/main.scss
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
+
 body {
   margin: 0;
+  cursor: url('./assets/cursors/hand.cur'), pointer;
+
 }
 .game {
   width: 100vw;
   height: 100vh;
+
 }
 h3 {
   font-family: 'Gabriela', serif;
@@ -16,7 +20,6 @@ h3 {
 }
 
 .icon {
-  cursor: pointer;
   background-position: center;
   background-size: cover;
   width: 100%;
