--- a/src/views/CharacterInfoView/styles.scss
+++ b/src/views/CharacterInfoView/styles.scss
@@ -1,7 +1,7 @@
 .character-info {
   width: 100%;
   height: 100%;
-  background-image: url('../../../assets/img/alliance_bg.jpg');
+  background-image: url('../../assets/img/alliance_bg.jpg');
   display: flex;
   &__character-preview {
     width: 30%;
