--- a/src/views/components/Menu/styles.scss
+++ b/src/views/components/Menu/styles.scss
@@ -3,4 +3,9 @@
   display: flex;
   flex-direction: column;
   margin: auto 0;
+  &_horizontal {
+    width: 100%;
+    height: 10%;
+    max-width: none;
+  }
 }
