--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-//@import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
 @import 'src/styles/variables.scss';
 body {
   margin: 0;
@@ -8,7 +8,9 @@ body {
 .game {
   width: 100vw;
   height: 100vh;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 h3 {
   font-family: 'Gabriela', serif;
@@ -71,15 +73,17 @@ h3 {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     height: 50%;
+    background-size: cover;
     &_alliance {
-      background: darkblue;
+      background-image: url('assets/img/alliance_felt_bg.jpg');
     }
     &_horde {
-      background: crimson;
+      background-image: url('assets/img/horde_felt_bg.jpg');
     }
   }
 
   &__add-character {
+    min-width: 200px;
     border: 2px dotted aqua;
   }
 }
@@ -92,12 +96,20 @@ h3 {
   }
 }
 .character-info {
-  display: flex;
+  display: none;
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  &_hidden {
-    display: none;
+  &_visible {
+    display: flex;
+  }
+  &_alliance {
+    background-image: url('assets/img/alliance_bg.jpg');
+  }
+  &_horde {
+    background-image: url('assets/img/horde_bg.jpg');
   }
 }
 
