--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Gabriela&display=swap');
 @import 'src/styles/variables.scss';
 body {
   margin: 0;
@@ -112,4 +112,16 @@ h3 {
     background-image: url('assets/img/horde_bg.jpg');
   }
 }
+.loader {
+  width: 100%;
+  height: 100%;
+  background: crimson;
+}
 
+.game-window {
+  &_medium {
+    width: 50%;
+    height: 50%;
+    margin: auto auto;
+  }
+}
