--- a/src/main.scss
+++ b/src/main.scss
@@ -26,6 +26,7 @@ h3 {
   background-size: cover;
   width: 100%;
   height: 100%;
+  display: block;
   &_druid {
     background-image: url('assets/icons/classes/druid_icon.png');
   }
@@ -87,24 +88,14 @@ h3 {
     border: 2px dotted aqua;
   }
 }
-.create-game-character {
-  &__body {
 
-  }
-  &__footer {
-
-  }
-}
 .character-info {
-  display: none;
+  display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  &_visible {
-    display: flex;
-  }
   &_alliance {
     background-image: url('assets/img/alliance_bg.jpg');
   }
@@ -124,4 +115,10 @@ h3 {
     height: 50%;
     margin: auto auto;
   }
+}
+
+.new-character {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
