--- a/src/main.scss
+++ b/src/main.scss
@@ -96,6 +96,7 @@ h3 {
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 15;
   &_alliance {
     background-image: url('assets/img/alliance_bg.jpg');
   }
@@ -122,4 +123,7 @@ h3 {
   width: 100%;
   height: 100%;
   pointer-events: none;
+  display: flex;
+  flex-direction: column;
+  z-index: 15;
 }
