--- a/src/views/components/ControlPanel/styles.scss
+++ b/src/views/components/ControlPanel/styles.scss
@@ -1,10 +1,13 @@
 .control-panel {
-  width: 10%;
-  height: 100%;
-  left: 0;
+  width: 100%;
+  height: 10%;
   display: flex;
   pointer-events: auto;
-  &_horizontal {
+  align-items: center;
+  justify-content: center;
+  &_vertical {
+    width: 10%;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
   }
